# cargo-verison

./: .gitignore  Cargo.toml  Makefile  README.md  cspell.json  release.sh
.github/workflows/: commit.yml  pr_merge.yml
src/: cli.rs  error.rs  project.rs
tests/standalone/: Cargo.toml
tests/standalone-no-repo/: Cargo.toml
tests/workspace/workspace-member/: Cargo.toml
tests/workspace1/: Cargo.toml
