[package]
name = "cargo-verison"
version = "0.1.12"
edition = "2021"
description = "Bump a package version"
readme = "README.md"
repository = "https://github.com/dimitrmo/cargo-verison"
keywords = ["cargo", "version", "verison", "bump"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
git2 = "0.18.2"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.10", features = ["parse"] }
toml_edit = "0.22.6"

[[bin]]
name = "cargo-verison"
path = "src/cli.rs"
