[package]
name = "cargo-verison"
version = "0.1.34"
edition = "2021"
description = "Bump a package version"
readme = "README.md"
repository = "https://github.com/dimitrmo/cargo-verison"
keywords = ["cargo", "version", "verison", "bump"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82" }
clap = { version = "4.5.4", features = ["derive"] }
git2 = { version = "0.18.3" }
semver = { version = "1.0.22" }
serde = { version = "1.0.200", features = ["derive"] }
toml = { version = "0.8.11", features = ["parse"] }
toml_edit = { version = "0.22.12" }

[[bin]]
name = "cargo-verison"
path = "src/cli.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true
